--- a/research.html
+++ b/research.html
@@ -42,13 +42,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.php"><i>Tola Kokoza</i></a>
+            <a class="navbar-brand" href="index.html"><i>Tola Kokoza</i></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index.php">Home</a></li>
-              <li class="active"><a href="research.php">Research</a></li>
-              <li><a href="teaching.php">Teaching</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="research.html">Research</a></li>
+              <li><a href="teaching.html">Teaching</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Downloads <span class="caret"></span></a>
                 <ul class="dropdown-menu">
