Updated CV and title 2018-07-24

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Downloads <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="KokozaCV2017.pdf">Curriculum Vitae</a></li>
+                  <li><a href="KokozaCV2018.pdf">Curriculum Vitae</a></li>
                   <li role="separator" class="divider"></li>
                   <li class="dropdown-header">Working Papers</li>
                   <li><a href="papers/Kokoza_JMP_October2016.pdf">Spatially Differentiated Renewable Energy Subsidies: What Is There to Gain? (Job Market Paper)</a></li>
@@ -75,9 +75,9 @@
         <p><img src="photo.jpg" alt="Portrait" style="width:240px; float: right" class="img-responsive">
 
         <h3><b>Anatolii Kokoza</h3>
-        <h4>Ph.D. candidate<br>Department of Economics<br>Eller College of Management<br>University of Arizona</h4></b><br>
+        <h4>Quantitative Risk Analyst<br>United Services Automobile Association</h4></b><br>
 
-        <h3><b><a href="KokozaCV2017.pdf">Curriculum Vitae</a></b></h3><br>        
+        <h3><b><a href="KokozaCV2018.pdf">Curriculum Vitae</a></b></h3><br>        
 
         <h3><b>Contact</b></h3>
         Email: <a href="mailto:kokoza@email.arizona.edu">kokoza@email.arizona.edu</a> <br>
@@ -90,7 +90,7 @@
          <a href="papers/Kokoza_JMP_October2016.pdf">Spatially Differentiated Renewable Energy Subsidies: What Is There to Gain?</a><br>Job Market Paper</p><br>
          
          
-         <h3><b>Recent Publications</b></h3>
+         <h3><b>Publications</b></h3>
          <a href="http://dx.doi.org/10.1016/j.ecotra.2016.11.001">Equilibrium traffic dynamics in a bathtub model: A special case</a><br>Richard Arnott, Anatolii Kokoza and Mehdi Naji. 2016. <b>Economics of Transportation</b>.<br><br>
 
          <p></p>
