Fixed email address to gmail

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h3><b><a href="KokozaCV2018.pdf">Curriculum Vitae</a></b></h3><br>        
 
         <h3><b>Contact</b></h3>
-        Email: <a href="mailto:kokoza@email.arizona.edu">kokoza@email.arizona.edu</a> <br>
+        Email: <a href="mailto:tolakokoza@gmail.com">tolakokoza@gmail.com</a> <br>
         Phone: <a href="tel:1-951-905-0647">(951) 905-0647</a><br><br>
 
         <h3><b>Research fields</b></h3>
