--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
          <h3><b>Publications</b></h3>
          <a href="http://dx.doi.org/10.1016/j.ecotra.2016.11.001">Equilibrium traffic dynamics in a bathtub model: A special case</a><br>Richard Arnott, Anatolii Kokoza and Mehdi Naji. 2016. <b>Economics of Transportation</b>.<br><br>
 
-         <a href="http://dx.doi.org/10.1155/2014/574659">Cellular Levels of Oxidative Stress Affect the Response of Cervical Cancer Cells to Chemotherapeutic Agents</a><br> Maria Filippova, Valery Filippov, Vonetta M. Williams, Kangling Zhang, Anatolii Kokoza, Svetlana Bashkirova, and Penelope Duerksen-Hughes. 2014. <b>BioMed Research International</b>. (Not economics)</p><br><br>
+         <a href="http://dx.doi.org/10.1155/2014/574659">Cellular Levels of Oxidative Stress Affect the Response of Cervical Cancer Cells to Chemotherapeutic Agents</a><br> Maria Filippova, Valery Filippov, Vonetta M. Williams, Kangling Zhang, Anatolii Kokoza, Svetlana Bashkirova, and Penelope Duerksen-Hughes. 2014. <b>BioMed Research International</b>.</p><br><br>
       
       </div>
 
